# good_commit_messages

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements-dev.txt  setup.cfg  tox.ini
good_commit_messages/: good_commit_messages.py
